Created a basic form - taking a break for tonight

--- a/PartyInvites/PartyInvites/PartyInvites.csproj
+++ b/PartyInvites/PartyInvites/PartyInvites.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\GuestResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -131,7 +132,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Models\" />
+    <Content Include="Views\Home\RsvpForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
