--- a/UnitTestingDemo/packages/repositories.config
+++ b/UnitTestingDemo/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\UnitTestingDemo\packages.config" />
+  <repository path="..\UnitTestingDemo.Tests\packages.config" />
 </repositories>
