--- a/SportsStore/SportsStore.WebUI/Web.config
+++ b/SportsStore/SportsStore.WebUI/Web.config
@@ -5,6 +5,15 @@
   -->
 
 <configuration>
+
+  <connectionStrings>
+    <add
+         name="EFDbContext" 
+         connectionString="Data Source=localhost;Initial Catalog=SportsStore; Integrated Security=SSPI"
+         providerName="System.Data.SqlClient"
+         />
+  </connectionStrings>
+  
   <appSettings>
     <add key="webpages:Version" value="1.0.0.0"/>
     <add key="ClientValidationEnabled" value="true"/>
